Added FW COY data

--- a/netlify.toml
+++ b/netlify.toml
@@ -36,7 +36,8 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+    Permissions-Policy = "camera=(), microphone=(self), geolocation=()"
+    Feature-Policy = "microphone 'self'"
 
 # Cache static assets
 [[headers]]
